--- a/assets/css/pict.css
+++ b/assets/css/pict.css
@@ -1,387 +1,167 @@
-	body{
-		font-family : Microsoft JhengHei,DFKai-sb,monospace;
-		font-weight:bold;
-		background-attachment: fixed;
-		background-repeat: no-repeat;
-		background-position:left top;
-		background-size:cover;
-		background-image: url(../../images/background2.jpg);
-		background-color: #ccc;
-	}
-	.init{
-		position:absolute;
-		z-index:-1;
-	}
-	.i1{
-		position:absolute;
-		left:200px;
-		top:725px;
-		z-index:0;
-	}
-	.i2{
-		position:absolute;
-		left:690px;
-		top:850px;
-		z-index:0;
-	}
-	.i3{
-		position:absolute;
-		left:610px;
-		top:550px;
-		z-index:0;
-	}
-	.i4{
-		position:absolute;
-		left:300px;
-		top:510px;
-		z-index:0;
-	}
-	.i5{
-		position:absolute;
-		left:380px;
-		top:725px;
-		z-index:0;
-	}
-	.hos1{
-		position:absolute;
-		left:460px;
-		top:270px;
-		z-index:0;
-	}
-	.hos2{
-		position:absolute;
-		left:630px;
-		top:270px;
-		z-index:0;
-	}
-	.gg{
-		position:absolute;
-		top:500px;
-		left:50px;
-		z-index:0;
-	}
-	.word{
-		position: relative;
-		top: 1650px;
-		font-family : Microsoft JhengHei,DFKai-sb,monospace;
-		font-weight:bold;
+html {
+	font-size: 13pt;
+}
 
-	}
-	
-	.p012{
-		position:absolute;
-		left:521px;
-		top:587px;
-		z-index:0;
-	}
-	.p022{
-		position:absolute;
-		left:439px;
-		top:522px;
-		z-index:0;
-	}
-	.p032{
-		position:absolute;
-		left:440px;
-		top:700px;
-		z-index:0;
-	}
-	.p042{
-		position:absolute;
-		left:305px;
-		top:370px;
-		z-index:0;
-	}
-	.p052{
-		position:absolute;
-		left:650px;
-		top:700px;
-		z-index:0;
-	}
-	.p062{
-		position:absolute;
-		left:700px;
-		top:800px;
-		z-index:0;
-	}
-	.p072{
-		position:absolute;
-		left:700px;
-		top:750px;
-		z-index:0;
-	}
-	.p082{
-		position:absolute;
-		left:615px;
-		top:820px;
-		z-index:0;
-	}
-	.p092{
-		position:absolute;
-		left:615px;
-		top:880px;
-		z-index:0;
-	}
-	.p102{
-		position:absolute;
-		left:1110px;
-		top:800px;
-		z-index:0;
-	}
-	.p112{
-		position:absolute;
-		left:990px;
-		top:800px;
-		z-index:0;
-	}
-	.p122{
-		position:absolute;
-		left:830px;
-		top:700px;
-		z-index:0;
-	}
-	.p132{
-		position:absolute;
-		left:830px;
-		top:750px;
-		z-index:0;
-	}
-	.p142{
-		position:absolute;
-		left:830px;
-		top:650px;
-		z-index:0;
-	}
-	.p152{
-		position:absolute;
-		left:830px;
-		top:550px;
-		z-index:0;
-	}
-	.p162{
-		position:absolute;
-		left:830px;
-		top:850px;
-		z-index:0;
-	}
-	.p172{
-		position:absolute;
-		left:1110px;
-		top:890px;
-		z-index:0;
-	}
-	
-	.p182{
-		position:absolute;
-		left:1025px;
-		top:1030px;
-		z-index:0;
-	}
-	.p192{
-		position:absolute;
-		left:830px;
-		top:600px;
-		z-index:0;
-	}
-	.p202{
-		position:absolute;
-		left:730px;
-		top:700px;
-		z-index:0;
-	}
-	.p212{
-		position:absolute;
-		left:870px;
-		top:310px;
-		z-index:0;
-	}
-	.p222{
-		position:absolute;
-		left:1025px;
-		top:1080px;
-		z-index:0;
-	}
-	.p232{
-		position:absolute;
-		left:495px;
-		top:800px;
-		z-index:0;
-	}
-	.p242{
-		position:absolute;
-		left:495px;
-		top:800px;
-		z-index:0;
-	}
-	.p252{
-		position:absolute;
-		left:495px;
-		top:800px;
-		z-index:0;
-	}
-	.p262{
-		position:absolute;
-		left:495px;
-		top:800px;
-		z-index:0;
-	}
-	.p272{
-		position:absolute;
-		left:495px;
-		top:800px;
-		z-index:0;
-	}
-	.p282{
-		position:absolute;
-		left:750px;
-		top:345px;
-		z-index:0;
-	}
-	.p292{
-		position:absolute;
-		left:870px;
-		top:275px;
-		z-index:0;
-	}
-	.p302{
-		position:absolute;
-		left:790px;
-		top:410px;
-		z-index:0;
-	}
-	.p312{
-		position:absolute;
-		left:870px;
-		top:400px;
-		z-index:0;
-	}
+body {
+	background-color: #fff;
+	font-weight: 300;
+	font-size: 1rem;
+	line-height: 1.65;
+}
 
-	.p322{
-		position:absolute;
-		left:870px;
-		top:355px;
-		z-index:0;
-	}
-	.p332{
-		position:absolute;
-		left:750px;
-		top:300px;
-		z-index:0;
-	}
-	.p342{
-		position:absolute;
-		left:410px;
-		top:370px;
-		z-index:0;
-	}
-	.p352{
-		position:absolute;
-		left:410px;
-		top:370px;
-		z-index:0;
-	}
-	.p362{
-		position:absolute;
-		left:410px;
-		top:370px;
-		z-index:0;
-	}
-	.p372{
-		position:absolute;
-		left:410px;
-		top:370px;
-		z-index:0;
-	}
-	.p382{
-		position:absolute;
-		left:990px;
-		top:900px;
-		z-index:0;
-	}
-	.p392{
-		position:absolute;
-		left:830px;
-		top:800px;
-		z-index:0;
-	}
-	.p402{
-		position:absolute;
-		left:225px;
-		top:530px;
-		z-index:0;
-	}
-	.p412{
-		position:absolute;
-		left:285px;
-		top:480px;
-		z-index:0;
-	}
-	.p422{
-		position:absolute;
-		left:300px;
-		top:650px;
-		z-index:0;
-	}
-	.p432{
-		position:absolute;
-		left:620px;
-		top:520px;
-		z-index:0;
-	}
-	.p442{
-		position:absolute;
-		left:355px;
-		top:275px;
-		z-index:0;
-	}
-	.p462{
-		position:absolute;
-		left:790px;
-		top:410px;
-		z-index:0;
-	}
-	.p472{
-		position:absolute;
-		left:750px;
-		top:345px;
-		z-index:0;
-	}
-	
-	table.tablesorter {
-		font-family:arial;
-		background-color: #CDCDCD;
-		margin:10px 0pt 15px;
-		font-size: 8pt;
-		width: 100%;
-		text-align: left;
-	}
-	table.tablesorter thead tr th, table.tablesorter tfoot tr th {
-		background-color: #e6EEEE;
-		border: 1px solid #FFF;
-		font-size: 8pt;
-		padding: 4px;
-	}
-	table.tablesorter thead tr .header {
-		background-image: url(../../images/bg.gif);
-		background-repeat: no-repeat;
-		background-position: center right;
-		cursor: pointer;
-	}
-	table.tablesorter tbody td {
-		color: #3D3D3D;
-		padding: 4px;
-		background-color: #FFF;
-		vertical-align: top;
-	}
-	table.tablesorter tbody tr.odd td {
-		background-color:#F0F0F6;
-	}
-	table.tablesorter thead tr .headerSortUp {
-		background-image: url(../../images/asc.gif);
-	}
-	table.tablesorter thead tr .headerSortDown {
-		background-image: url(../../images/desc.gif);
-	}
-	table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
-	background-color: #8dbdd8;
-	}
+h1, h2, h3, h4, h5, h6 {
+	font-weight: 700;
+	line-height: 1.5;
+	margin: 0 0 1rem 0;
+}
+
+body {
+	background-color: #1e1f23;
+	padding-top: 8rem;
+}
+
+body.is-loading:after {
+	visibility: hidden;
+	opacity: 0;
+}
+
+body:after {
+	-moz-transition: opacity 1.5s ease-in-out, visibility 1.5s;
+	-webkit-transition: opacity 1.5s ease-in-out, visibility 1.5s;
+	transition: opacity 1.5s ease-in-out, visibility 1.5s;
+	content: '';
+	background-image: url(../../images/bg.jpg);
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: fixed;
+	display: block;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	z-index: -1;
+	visibility: visible;
+	opacity: 1;
+}
+
+#header {
+	color: #a6a6a6;
+	cursor: default;
+	position: relative;
+	text-align: center;
+	z-index: 10001;
+	margin: 0 0 4rem 0;
+	padding: 0;
+	font-size: 4rem;
+	font-weight: 700;
+	color: #FFF;
+	text-decoration: none;
+	line-height: 1rem;
+}
+
+body {
+	padding-top: 6rem;
+	background-attachment: scroll;
+	background-size: auto;
+	background-position: top;
+}
+
+#header > .logo {
+	margin: 0 0 2rem 0;
+}
+#header > .logo a {
+		font-size: 3rem;
+}
+
+#main > .inner {
+	margin: 0 auto;
+	width: 80rem;
+	max-width: 90%;
+	background: rgba(255, 255, 255, 0.95);
+}
+
+.wrapper > header {
+	text-align: center;
+	background: #FFF;
+	padding: 2rem;
+	margin: 0;
+}
+
+.wrapper > header.special {
+	padding: 4rem 2rem;
+}
+
+.wrapper.style1 .content {
+	padding: 6rem;
+}
+
+.sor{
+	width:60px;
+	height:20px;
+}
+
+.bot{
+	border:2px blue none;
+	background-color:transparent;
+	background-image:url(../../images/button.png);
+	background-size:100% 100%;
+}
+
+body{
+	font-family : Microsoft JhengHei,DFKai-sb,monospace;
+	font-weight:bold;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-position:left top;
+	background-size:cover;
+	background-image: url(../../images/background2.jpg);
+	background-color: #ccc;
+}
+
+table.tablesorter {
+	font-family:arial;
+	background-color: #CDCDCD;
+	margin:10px 0pt 15px;
+	font-size: 12pt;
+	width: 100%;
+	text-align: left;
+}
+
+table.tablesorter thead tr th, table.tablesorter tfoot tr th {
+	background-color: #e6EEEE;
+	border: 1px solid #FFF;
+	font-size: 8pt;
+	padding: 4px;
+}
+
+table.tablesorter thead tr .header {
+	background-image: url(../../images/bg.gif);
+	background-repeat: no-repeat;
+	background-position: center right;
+	cursor: pointer;
+}
+
+table.tablesorter tbody td {
+	color: #3D3D3D;
+	padding: 4px;
+	background-color: #FFF;
+	vertical-align: top;
+}
+
+table.tablesorter tbody tr.odd td {
+	background-color:#F0F0F6;
+}
+
+table.tablesorter thead tr .headerSortUp {
+	background-image: url(../../images/asc.gif);
+}
+
+table.tablesorter thead tr .headerSortDown {
+	background-image: url(../../images/desc.gif);
+}
+
+table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
+background-color: #8dbdd8;
+}
